--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation project(path: ':lib_cache')
     implementation project(path: ':lib_common')
     testImplementation 'junit:junit:4.12'
