--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,14 @@ android {
         jvmTarget = '1.8'
     }
 
-    dataBinding{
+    dataBinding {
         enabled = true
     }
+
+    viewBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
@@ -59,9 +64,9 @@ dependencies {
     //implementation 'android.arch.persistence.room:runtime:1.1.1'
     //annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
-    implementation 'androidx.room:room-runtime:2.0.0'
-    annotationProcessor 'androidx.room:room-compiler:2.0.0'
-    implementation 'androidx.room:room-rxjava2:2.0.0'
-    implementation 'androidx.room:room-guava:2.0.0'
-    testImplementation 'androidx.room:room-testing:2.0.0'
+    implementation 'androidx.room:room-runtime:2.2.6'
+    kapt 'androidx.room:room-compiler:2.2.6'
+    implementation 'androidx.room:room-rxjava2:2.2.6'
+    implementation 'androidx.room:room-guava:2.2.6'
+    testImplementation 'androidx.room:room-testing:2.2.6'
 }
