--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.mao.jetpack">
 
     <application
-        android:allowBackup="true"
         android:name=".JetPackApplication"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -26,6 +26,7 @@
         <activity android:name=".ui.viewmodelfile.ViewModelJavaLiveDataActivity" />
         <activity android:name=".ui.viewmodelfile.ViewModelActivity" />
         <activity android:name=".ui.viewmodelfile.ViewModelJavaActivity" />
+        <activity android:name=".ui.room.RoomActivity" />
     </application>
 
 </manifest>
