--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".ui.room.RoomSelectActivity" />
 
         <activity android:name=".ui.deeplink.WebActivity" />
+        <activity android:name=".ui.deeplink.WebJavaActivity" />
 
         <activity android:name=".ui.deeplink.DeepLinkActivity">
 
