--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".ui.room.RoomSelectActivity" />
         <activity android:name=".ui.constraintLayout.ConstraintLayoutActivity" />
         <activity android:name=".ui.motionlayout.MotionLayoutActivity" />
+        <activity android:name=".ui.motionlayout.MLObjectAnimator1Activity" />
+        <activity android:name=".ui.motionlayout.MLObjectAnimator2Activity" />
 
         <activity android:name=".ui.deeplink.WebActivity" />
 
