--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".ui.motionlayout.MotionLayoutActivity" />
         <activity android:name=".ui.motionlayout.MLObjectAnimator1Activity" />
         <activity android:name=".ui.motionlayout.MLObjectAnimator2Activity" />
+        <activity android:name=".ui.motionlayout.GoActivity" />
 
         <activity android:name=".ui.deeplink.WebActivity" />
         <activity android:name=".ui.deeplink.WebJavaActivity" />
