MotionActivity.kt   motionSence 配合 xml 进行的动画

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".ui.motionlayout.MLObjectAnimator2Activity" />
         <activity android:name=".ui.motionlayout.GoActivity" />
         <activity android:name=".ui.motionlayout.ConstraintSetExample" />
+        <activity android:name=".ui.motionlayout.MotionActivity" />
 
         <activity android:name=".ui.deeplink.WebActivity" />
         <activity android:name=".ui.deeplink.WebJavaActivity" />
