--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".ui.motionlayout.GoActivity" />
         <activity android:name=".ui.motionlayout.ConstraintSetExample" />
         <activity android:name=".ui.motionlayout.MotionActivity" />
+        <activity android:name=".ui.motionlayout.MotionSampleActivity" />
 
         <activity android:name=".ui.deeplink.WebActivity" />
         <activity android:name=".ui.deeplink.WebJavaActivity" />
