--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,10 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:3.6.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,9 +17,21 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter()
     }
 }
+
+ext {
+    compileSdkVersion = 30
+    buildToolsVersion = '29.0.3'
+    minSdkVersion = 21
+    targetSdkVersion = 30
+    kotlin_version = '1.3.72'
+    androidXVersion = '1.3.1'
+    androidXMaterial = '1.4.0'
+    lifecycle_version = "2.2.0"
+    googleAutoServiceDependency = 'com.google.auto.service:auto-service:1.0'
+}
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
