--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
 
+    <!-- android:name=".JetPackApplication"-->
     <application
-        android:name=".JetPackApplication"
+        android:name=".JTApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -63,6 +64,18 @@
             </intent-filter>
 
         </activity>
+
+        <activity
+            android:name=".ui.task.OneTaskActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.task.TwoTaskActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="true"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
