--- a/webview/build.gradle
+++ b/webview/build.gradle
@@ -35,12 +35,11 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
     implementation "androidx.appcompat:appcompat:$rootProject.androidXVersion"
     implementation "com.google.android.material:material:$rootProject.androidXMaterial"
     annotationProcessor rootProject.googleAutoServiceDependency
     implementation rootProject.googleAutoServiceDependency
+    kapt rootProject.googleAutoServiceDependency
     //kapt "com.google.auto.service:auto-service:1.0"
     //implementation "com.google.auto.service:auto-service:1.0"
     api project(":common")
