--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,9 @@ dependencies {
     // 轮子哥 shapeView
     /*implementation 'com.github.getActivity:ShapeView:6.0'*/
 
-    implementation 'com.github.lihangleo2:ShadowLayout:3.2.3'
+    //implementation 'com.github.lihangleo2:ShadowLayout:3.2.3'
+
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
 
     implementation project(':webview')
 }
