--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.8.0'
 
     implementation project(':webview')
+
+    implementation 'com.github.lihangleo2:ShadowLayout:2.1.8'
 }
