--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,5 +90,5 @@ dependencies {
 
     implementation project(':webview')
 
-    implementation 'com.github.lihangleo2:ShadowLayout:2.1.8'
+    /*implementation 'com.github.lihangleo2:ShadowLayout:2.1.8'*/
 }
