--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".ui.deeplink.WebActivity" />
         <activity android:name=".ui.deeplink.WebJavaActivity" />
         <activity android:name=".ui.button.ButtonShapeActivity" />
+        <activity android:name=".ui.banner.BannerActivity" />
 
         <activity android:name=".ui.deeplink.DeepLinkActivity">
 
