--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'http://depot.sankuai.com/nexus/content/groups/public/' }
         jcenter()
         maven { url 'https://jitpack.io' }
     }
@@ -19,6 +20,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'http://depot.sankuai.com/nexus/content/groups/public/' }
         jcenter()
         maven { url 'https://jitpack.io' }
     }
