--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.8.0'
 
     implementation project(':webview')
+    implementation project(':jp-livedata')
 
 
     implementation 'com.squareup.picasso:picasso:10000.0.0.137'
