--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,7 @@ dependencies {
 
     implementation project(':webview')
     implementation project(':jp-livedata')
+    implementation project(':jp-livedata-java')
 
 
     implementation 'com.squareup.picasso:picasso:10000.0.0.137'
