--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <activity android:name=".ui.livedata.LiveDataActivity" />
         <activity android:name=".ui.livedata.LiveDataNewActivity" />
         <activity android:name=".ui.livedata.LiveDataNewDActivity" />
+        <activity android:name=".ui.livedata.JavaLiveDataActivity" />
+        <activity android:name=".ui.livedata.Java2LiveDataActivity" />
         <activity android:name=".ui.livedata.LiveDataJavaSingleActivity" />
         <activity android:name=".ui.viewmodelfile.ViewModelJavaLiveDataActivity" />
         <activity android:name=".ui.viewmodelfile.ViewModelActivity" />
