--- a/base/build.gradle
+++ b/base/build.gradle
@@ -36,15 +36,27 @@ dependencies {
     api "androidx.appcompat:appcompat:$rootProject.androidXVersion"
     api "com.google.android.material:material:$rootProject.androidXMaterial"
 
+    // 协程
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
+
     api 'com.kingja.loadsir:loadsir:1.3.8'
     api 'com.airbnb.android:lottie:4.1.0'
 
-    api  'com.scwang.smart:refresh-layout-kernel:2.0.1'      //核心必须依赖
+    api  'com.scwang.smart:refresh-layout-kernel:2.0.3'      //核心必须依赖
     api  'com.scwang.smart:refresh-header-classics:2.0.1'    //经典刷新头
     api  'com.scwang.smart:refresh-header-radar:2.0.1'       //雷达刷新头
     api  'com.scwang.smart:refresh-header-falsify:2.0.1'     //虚拟刷新头
-    api  'com.scwang.smart:refresh-header-material:2.0.1'    //谷歌刷新头
+    api  'com.scwang.smart:refresh-header-material:2.0.3'    //谷歌刷新头
     api  'com.scwang.smart:refresh-header-two-level:2.0.1'   //二级刷新头
     api  'com.scwang.smart:refresh-footer-ball:2.0.1'        //球脉冲加载
     api  'com.scwang.smart:refresh-footer-classics:2.0.1'    //经典加载
+
+    // retrofit
+    api "com.squareup.retrofit2:retrofit:2.8.1"
+    api "com.squareup.retrofit2:converter-gson:2.8.1"
+
+    // okhttp
+    api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    api 'com.squareup.okhttp3:okhttp:4.3.1'
 }
