--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,5 @@ dependencies {
 
 
     implementation 'com.squareup.picasso:picasso:10000.0.0.137'
+    implementation "com.github.appium:java-client:7.6.0"
 }
