--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,9 @@
             android:screenOrientation="portrait" />
 
         <activity android:name=".ui.coroutine.CoroutineActivity"/>
+        <activity android:name=".ui.reflect.ReflectOneActivity"/>
+        <activity android:name=".ui.reflect.ReflectSecondActivity"/>
+        <activity android:name=".ui.reflect.ReflectThirdActivity"/>
     </application>
 
 </manifest>
