--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,5 +96,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:10000.0.0.137'
 
     implementation "androidx.activity:activity-ktx:1.2.4"
+    implementation "com.maoyan.android.common:view:10000.4.82"
     //implementation 'com.github.ai2101039:YLCircleImageView:v1.0.8'
 }
