--- a/build.gradle
+++ b/build.gradle
@@ -2,27 +2,34 @@
 buildscript {
     ext.kotlin_version = "1.4.32"
     repositories {
-        google()
         mavenCentral()
-        maven { url 'http://depot.sankuai.com/nexus/content/groups/public/' }
+        google()
+
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.6.4"
+        classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.github.spotbugs.snom:spotbugs-gradle-plugin:5.0.9"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+
 allprojects {
     repositories {
-        google()
         mavenCentral()
-        maven { url 'http://depot.sankuai.com/nexus/content/groups/public/' }
+        google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 }
 
