--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".ui.button.ButtonShapeActivity" />
         <activity android:name=".ui.banner.BannerActivity" />
         <activity android:name=".ui.button.ButtonShapeOtherActivity" />
+        <activity android:name=".ui.text.TextUIActivity"/>
 
         <activity android:name=".ui.deeplink.DeepLinkActivity">
 
@@ -95,6 +96,7 @@
         <activity android:name=".ui.reflect.ReflectSecondActivity"/>
         <activity android:name=".ui.reflect.ReflectThirdActivity"/>
         <activity android:name=".ui.image.ImageActivity"/>
+        <activity android:name=".ui.text.AnimatorUiActivity"/>
     </application>
 
 </manifest>
