--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,7 @@
         <activity android:name=".ui.reflect.ReflectThirdActivity"/>
         <activity android:name=".ui.image.ImageActivity"/>
         <activity android:name=".ui.text.AnimatorUiActivity"/>
+        <activity android:name=".ui.text.AnimatorUTwoActivity"/>
     </application>
 
 </manifest>
