--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,4 +98,6 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.2.4"
     implementation "com.maoyan.android.common:view:10000.4.82"
     //implementation 'com.github.ai2101039:YLCircleImageView:v1.0.8'
+
+    implementation 'com.google.android:flexbox:1.0.0'
 }
