--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,6 @@ dependencies {
     //implementation 'com.github.ai2101039:YLCircleImageView:v1.0.8'
 
     implementation 'com.google.android:flexbox:1.0.0'
+
+    implementation 'com.github.tiann:FreeReflection:3.1.0'
 }
