--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,6 +104,7 @@
         <activity android:name=".ui.fllexbox.FlexBoxActivity"/>
         <activity android:name=".ui.seekbar.SeekbarActivity"/>
         <activity android:name=".ui.text.AnimatorTotalActivity"/>
+        <activity android:name=".ui.text.AnimatorUIFourOtherActivity"/>
     </application>
 
 </manifest>
