--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     //implementation 'com.github.lihangleo2:ShadowLayout:3.2.3'
 
     implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'jp.wasabeef:glide-transformations:2.0.1'
 
     implementation project(':webview')
 
