--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,6 @@ dependencies {
     implementation 'com.google.android:flexbox:1.0.0'
 
     implementation 'com.github.tiann:FreeReflection:3.1.0'
+
+    implementation "com.maoyan.android.business:medium:10000.3.dp.118"
 }
