--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,6 +101,7 @@
         <activity android:name=".ui.text.AnimatorUiTwoScaleActivity"/>
         <activity android:name=".ui.text.AnimatorUIThreeActivity"/>
         <activity android:name=".ui.text.AnimatorUIThreeOtherActivity"/>
+        <activity android:name=".ui.text.ActivityOneActivity"/>
         <activity android:name=".ui.fllexbox.FlexBoxActivity"/>
         <activity android:name=".ui.seekbar.SeekbarActivity"/>
         <activity android:name=".ui.text.AnimatorTotalActivity"/>
