--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,6 +106,7 @@
         <activity android:name=".ui.seekbar.SeekbarActivity"/>
         <activity android:name=".ui.text.AnimatorTotalActivity"/>
         <activity android:name=".ui.text.AnimatorUIFourOtherActivity"/>
+        <activity android:name=".ui.recyclerview.ActivityRecyclerActivity"/>
     </application>
 
 </manifest>
